--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,6 +4,7 @@ body {
     background-repeat: repeat-y;
     background-attachment: fixed;
     background-size: 100% 100%;
+    display: flex;
     position: relative;
 }
 p {
