--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,6 +32,7 @@ p {
     margin: 5%auto;
     display: inline-block;
     position: absolute;
+    left:auto 5%;
 }
 .Frame::after {
     padding-left: 56.25%;
