--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,7 +25,7 @@ p {
     margin-top: 15px;
 }
 .Frame {
-    width: 80%inherit;
+    width: 80%;
     background-color: black;
     border: 10px solid darkred;
     padding: 34px;
