--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,13 +25,16 @@ p {
     margin-top: 15px;
 }
 .Frame {
-    background-color: black;
     width: 80%auto;
     border: 10px solid darkred;
     padding: 34px;
     margin: 34px;
     display: inline-block;
     left: 5px;
+}
+
+.Frame {
+      background-color: black;
 }
 .Frame::after {
     padding-left: 56.25%;
