--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,7 +26,7 @@ p {
 }
 .Frame {
       background-color: black;
-    width: 80%;
+    width: 80px;
     border: 10px solid darkred;
     padding: 34px;
     margin: 34px;
