--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,8 @@
-/* HTML Elements */
 body {
     background-image: url('https://live.staticflickr.com/65535/51659408066_7bdc855554_o.jpg');
     background-repeat: repeat-y;
     background-attachment: fixed;
     background-size: 100% 100%;
-    display: flex;
     position: relative;
 }
 p {
@@ -25,13 +23,14 @@ p {
     margin-top: 15px;
 }
 .Frame {
+    width: 1125px;
     background-color: black;
-    width: 80%;
-    border: 7px solid darkred;
-    padding: 34px;
-    margin: 34px;
-    left: 5px;
+    border: 3px solid darkred;
+    padding: 5px;
+    margin: 5px;
+    display: inline-block;
     position: absolute;
+    left: 25%;
 }
 .Frame::after {
     padding-left: 56.25%;
@@ -54,8 +53,8 @@ p {
     font-size: 25px;
     font-weight:bold;
     color:#ff3312;
-    display: flex;
     text-align: center;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
