--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,7 +23,7 @@ p {
     margin-top: 15px;
 }
 .Frame {
-    width: 1125px;
+    width: 80%;
     background-color: black;
     border: 3px solid darkred;
     padding: 5px;
